0.9.5
	- Fixed bug that prevented the wrappers to launch the bundled jvm
	- Added home-made ICO loader code, so that JIMI is not required
	anymore (thus removing a dependency to a closed-source Sun
	package).
	- Added color reduction for icons using true-color images.
	- Fixed transparency issue with icon resource set up in the
	executable.
	- Set the system look-and-feel as default
	- Fixed a few typos in the skeleton descriptors
	- Added version in the title bar of the application window
	- Improved the documentation (at least, tried to)
	
0.9.4
	- ! Added Ant Task support 
	- ! Added Command Line compiler
	- ! distribution build now fully automatic
	- Added small set of testing suit
	- Changed default xml encoding of the project, due a flaw in the
	Sun's XMLDecoder classes which prevented it to work with ant (this
	is a classloader issue).
	- Added command line launching support
	- Added automatic dist creation
	- Fixed corrupt classpath when project file not in the same
	directory than the executable built.
	- Fixed a bug corrupting the value part when edition java
	properties
	
0.9.3
	- Added Java Properties management in JSmoothGen
	- Added variable management for java properties in wrappers 
	- Fixed bug: incorrect Sun's jre.exe/java.exe 1.1 classpath
	- Fixed minor bug: FileUtils::recursiveSearch method scanning
	files instead of just the directories
	- Fixed major bug: *.jar files not added to classpath for Sun's
	JRE 1.1
	- Fixed bug #801407:Relative directory stuff seems confused by
	multiple drives
	- Fixed bug #803979: Windows size/position not retained between
	sessions
	- Fixed bug #801411: Classpath area UI details
	- Fixed bug #801408: manifest defined main-class ignored
	- Added Class Chooser Dialog in Java Application panel
	- Added splash screen (displays name and version).
	- Added maximum memory and initial memory setting support
	- Written first draft of the user manual
	- Fixed issue with parameter string ending with a backslash. 
	