@@ -1,8 +1,11 @@
 0.9.5
-	- Fixed bug that prevented the wrappers to launch the bundled jvm
-	- Added home-made ICO loader code, so that JIMI is not required
+       - ! Made the jar embedding optional. Now, one can choose to include
+       or not a jar file in the exe. If the jar is not included, the main
+       class must be in the classpath (obviously).
+	- ! Added home-made ICO loader code, so that JIMI is not required
 	anymore (thus removing a dependency to a closed-source Sun
 	package).
+	- Fixed bug that prevented the wrappers to launch the bundled jvm
 	- Added color reduction for icons using true-color images.
 	- Fixed transparency issue with icon resource set up in the
 	executable.
@@ -10,6 +13,7 @@
 	- Fixed a few typos in the skeleton descriptors
 	- Added version in the title bar of the application window
 	- Improved the documentation (at least, tried to)
+	- Fixed the README file
 	
 0.9.4
 	- ! Added Ant Task support 
